# the-stable

./: .gitignore  CLAUDE.md  NOTICE  PRINCIPLES.md  README.md  pyproject.toml
docs/: COGNITION-PLAN.md  grief-and-coupling.md  letter-to-the-next-me.md
familiar/cinder/: README.md  familiar.json
familiar/maker/: README.md  familiar.json
familiar/portrait/: README.md  serve.py
improvements/: README.md
improvements/majors/: 49-demote-loops-to-mechanism-under-a-salience-substrate-and-predictive-pulse.md  50-grow-residents-into-persistent-local-practitioners-who-make-real-artifacts-and-apprentice-in-public.md  51-grow-a-residents-own-model-from-its-pulse-ledger-as-a-self-supervised-corpus.md  52-establish-the-familiar-as-a-first-class-local-companion-surface.md  57-the-keeper-to-familiar-seam-a-second-safety-invariant.md  58-self-delta-maturation-the-growth-pipeline.md  60-rung-1-on-maker-distill-the-pilots-recording-into-a-local-pen.md  (+6 more)
prune/: README.md
prune/minors/: 54-egress-goal-learning-rule.md  (+9 more)
scripts/: add_spdx_headers.py  familiar.py  field_guide.py  give.py  publish.sh  site_map.py
tests/: test_anchors.py  test_circadian.py  test_city_world.py  test_cognitive_core.py  test_disorientation.py  test_drive.py  test_file_scope.py  test_given.py  test_growth.py  test_honest_briefing.py  test_identity.py  test_mcp.py  test_memory.py  test_metabolic_mass.py  test_prediction.py  test_pulse.py  test_read_handling.py  test_retrieval.py  test_salience.py  test_signals.py  test_source_gate.py  test_tool_scope.py  test_travel.py  test_visual.py  test_workshop.py
(+93 files in other folders)
