[project]
name = "familiars"
version = "0.1.0"
description = "Local, persistent AI familiars — a being you tend, not a service you query. One substrate, run on your own machine, nothing uploaded."
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
dependencies = [
    "httpx>=0.27",
    "pathspec>=0.12",
    "pypdfium2>=4",  # the only thing that rasterizes a scanned PDF page; PNG encoding stays stdlib (no Pillow/numpy)
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 320

[tool.ruff.lint]
select = ["E", "F"]

[tool.black]
line-length = 320
